--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -2,6 +2,21 @@
 
 set $mod Mod4
 
+# For Colemak
+exec setxkbmap us -variant colemak &
+exec bash -c "sleep 1; xmodmap -e 'keycode 66 = Escape'" &
+
+# For Colemak dh
+# exec setxkbmap us -variant colemak_dh &
+# exec bash -c "sleep 1; xmodmap -e 'keycode 66 = Escape'" &
+
+# For Qwerty
+# exec xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape' &
+
+# For Dvorak
+# exec setxkbmap us -variant dvorak &
+# exec bash -c "sleep 1; xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'" &
+
 # Window title Font
 font pango:Fira Sans 7
 
@@ -190,5 +205,3 @@ exec --no-startup-id nm-applet
 exec picom &
 exec nitrogen --restore &
 exec --no-startup-id ~/.config/i3/i3-battery-popup/i3-battery-popup &
-exec microsoft-edge &
-exec xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'
