New keyoard layout

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -9,8 +9,9 @@ set $mod Mod4
 # exec bash -c "sleep 1; xmodmap -e 'keycode 66 = Escape'" &
 
 # For Colemak dh
-exec setxkbmap us -variant colemak_dh &
-exec bash -c "xmodmap -e 'clear Lock' -e 'keycode 66 = Escape'" &
+# exec setxkbmap us -variant colemak_dh &
+exec xkbcomp ~/.config/xkb/real-prog-colemak.xkb $DISPLAY &
+# exec bash -c "xmodmap -e 'clear Lock' -e 'keycode 66 = Escape'" &
 
 # Window title Font
 font pango:Fira Sans 7
