--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -4,8 +4,11 @@ set $mod Mod4
 
 # Keyboard layout
 
+# For Qwerty
+exec bash -c "sleep 1; xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'" &
+
 # For Vim colemak
-exec xkbcomp ~/.config/xkb/vim-colemak.xkb $DISPLAY
+# exec xkbcomp ~/.config/xkb/vim-colemak.xkb $DISPLAY
 
 # For Colemak
 # exec setxkbmap us -variant colemak &
