--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -6,20 +6,13 @@ command_timeout = 2000
 
 [character]
 success_symbol = "[➜](bold green)"
+error_symbol = "[➜](red)"
 
 [cmd_duration]
 format = '\[[⏱ $duration]($style)\]'
 
-[dart]
-symbol = " "
-format = '\[[$symbol($version)]($style)\]'
-
 [directory]
 read_only = " "
-
-[elixir]
-symbol = " "
-format = '\[[$symbol($version \(OTP $otp_version\))]($style)\]'
 
 [git_branch]
 symbol = " "
@@ -30,40 +23,9 @@ format = '([\[$all_status$ahead_behind\]]($style))'
 
 [golang]
 symbol = ""
-format = '\[[$symbol($version)]($style)\]'
-
-[java]
-symbol = " "
-format = '\[[$symbol($version)]($style)\]'
-
-[kotlin]
-symbol = "🅺 "
-format = 'via [$symbol]($style)'
 
 [lua]
 symbol = ""
-format = '\[[$symbol($version)]($style)\]'
-
-[nodejs]
-symbol = " "
-format = '\[[$symbol($version)]($style)\]'
-
-[package]
-symbol = " "
-format = '\[[$symbol$version]($style)\]'
-
-[perl]
-symbol = " "
-format = '\[[$symbol($version)]($style)\]'
 
 [python]
 symbol = " "
-format = '\[[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)\]'
-
-[ruby]
-symbol = ""
-format = '\[[$symbol($version)]($style)\]'
-
-[scala]
-symbol = " "
-format = '\[[$symbol($version)]($style)\]'
