--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -32,9 +32,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrains Mono:pixelsize=9 1
-; font-1 = "Iosevka Nerd Font:size=10;4"
-; font-2 = "feather:size=10;3"
+font-0 = JetBrains Mono Semibold:pixelsize=9 1
 
 modules-left = xworkspaces xwindow i3
 modules-right = battery pulseaudio memory cpu wlan date
