--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,7 +1,7 @@
 # i3 config file (v4.19.1)
 
-# exec bash -c "sleep 1; xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'" &
-exec bash -c "setxkbmap us norman; sleep 1; xmodmap -e 'keycode 66 = Escape'"
+exec bash -c "setxkbmap us; sleep 1; xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'" &
+# exec bash -c "setxkbmap us dvorak; sleep 1; xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'"
 
 set $mod Mod4
 
