--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,7 +1,8 @@
 # i3 config file (v4.19.1)
 
-# For qwerty
-exec bash -c "sleep 1; xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'" &
+# Keyboard layout
+exec bash -c "sleep 1; setxkbmap us dvorak; xmodmap -e 'clear Lock' -e 'keycode 66 = Escape'"
+# exec bash -c "sleep 1; xmodmap -e 'clear Lock' -e 'keycode 0x42 = Escape'" &
 
 set $mod Mod4
 
