--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -2,7 +2,7 @@
 
 # Window
 window:
-  opacity: 0.95
+  opacity: 1
 
 # Scrolling
 scrolling:
@@ -13,6 +13,7 @@ scrolling:
 font:
   normal:
     family: JetBrains Mono
+    style: Regular
   bold:
     family: JetBrains Mono
     style: Bold
