--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,4 +1,4 @@
-; Polybar 3.6.1
+; Polybar Config
 
 [colors]
 background = #1f2023
@@ -40,21 +40,15 @@ modules-right = battery pulseaudio memory cpu wlan date
 cursor-click = pointer
 cursor-scroll = ns-resize
 
-; enable-ipc = true
-
 tray-position = right
 
 wm-restack = i3
 
-; override-redirect = true
-
 [module/battery]
 type = internal/battery
 
-; This is useful in case the battery never reports 100% charge
 full-at = 99
 
-; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = AC
@@ -82,52 +76,27 @@ format-full-prefix-background = ${colors.background}
 format-full-prefix-foreground = ${colors.primary}
 format-full-prefix-padding = 1
 
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current charge rate in watts)
 label-charging = %percentage%%
 label-charging-background = ${colors.background}
 label-charging-padding = 1
 
-; Available tokens:
-;   %percentage% (default)
-;   %time%
-;   %consumption% (shows current discharge rate in watts)
 label-discharging = %percentage%%
 label-discharging-background = ${colors.background}
 label-discharging-padding = 0
 
-; Available tokens:
-;   %percentage% (default)
 label-full = Full
 label-full-background = ${colors.background}
 label-full-foreground = ${colors.primary}
 label-full-padding = 0
 
-; Only applies if <ramp-capacity> is used
 ramp-capacity-0 =
 ramp-capacity-1 =
 ramp-capacity-2 =
 ramp-capacity-3 =
 ramp-capacity-4 =
 
-; Only applies if <bar-capacity> is used
-;bar-capacity-width = 10
-
-; Only applies if <animation-charging> is used
-animation-charging-0 =
-animation-charging-1 =
-
 ; Framerate in milliseconds
 animation-charging-framerate = 750
-
-; Only applies if <animation-discharging> is used
-;;animation-discharging-0 = ${battery.anim0}
-;;animation-discharging-1 = ${battery.anim1}
-
-; Framerate in milliseconds
-;animation-discharging-framerate = 500
 
 [module/xworkspaces]
 type = internal/xworkspaces
