--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -4,9 +4,6 @@ set $mod Mod4
 
 font pango: Fira Sans 8
 
-# Keyboard layout
-exec ~/.local/bin/setkeyboard dvorak
-
 # Adjust Screen Brightness
 bindsym XF86MonBrightnessUp exec brightnessctl s +10%
 bindsym XF86MonBrightnessDown exec brightnessctl s 10%-
@@ -160,11 +157,14 @@ bindsym $mod+c exec pcmanfm
 bindsym $mod+Escape exec i3lock-fancy
 bindsym $mod+Shift+t exec ~/.local/bin/togglealacrittyopacity
 bindsym $mod+Shift+b exec ~/.local/bin/setbackground -r
+bindsym $mod+m exec alacritty -e musikcube
+bindsym Print exec flatpak run org.flameshot.Flameshot gui &
 
 # To be executed on reload
 exec_always --no-startup-id killall polybar; polybar &
 
 # Startup Applications
+exec ~/.local/bin/setkeyboard dvorak &
 exec ~/.local/bin/i3-battery-popup &
 exec nm-applet &
 exec blueman-applet &
