--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -12,18 +12,18 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: JetBrains Mono
+    family: Ubuntu Mono
     style: Regular
   bold:
-    family: JetBrains Mono
+    family: Ubuntu Mono
     style: Bold
   italic:
-    family: JetBrains Mono
+    family: Ubuntu Mono
     style: Italic
   bolditalic:
-    family: JetBrains Mono
+    family: Ubuntu Mono
     style: Bold Italic
-  size: 10
+  size: 11
 
 # Colour Schemes
 colors :
