--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -14,6 +14,8 @@ width = 100%
 height = 14pt
 radius = 0
 
+bottom = false
+
 background = ${colors.background}
 foreground = ${colors.foreground}
 
