--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -11,7 +11,8 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 14pt
+height = 13pt
+dpi = 96
 radius = 0
 
 bottom = false
@@ -34,7 +35,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrains Mono Semibold:pixelsize=9 1
 
-modules-left = xworkspaces xwindow i3
+modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio memory cpu wlan date
 
 cursor-click = pointer
