--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,8 +1,12 @@
 # i3 Config
 
 set $mod Mod4
+set $l n
+set $u i
+set $d e
+set $r o
 
-font pango: Fira Sans 8
+font pango: Ubuntu Mono 8
 
 # Adjust Screen Brightness
 bindsym XF86MonBrightnessUp exec brightnessctl s +10%
@@ -41,20 +45,20 @@ bindsym $mod+slash exec rofi -show-icons -show window
 bindsym $mod+space exec rofi -show-icons -show drun
 
 # Change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $mod+$l focus left
+bindsym $mod+$d focus down
+bindsym $mod+$u focus up
+bindsym $mod+$r focus right
 # Also with cursor keys
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Shift+$l move left
+bindsym $mod+Shift+$d move down
+bindsym $mod+Shift+$u move up
+bindsym $mod+Shift+$r move right
 # Also with cursor keys
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
@@ -142,7 +146,7 @@ mode "Exit (L)ogout, (R)eboot, (P)oweroff" {
     bindsym Escape mode "default"
 }
 
-bindsym $mod+Shift+e mode "Exit (L)ogout, (R)eboot, (P)oweroff"
+bindsym $mod+Shift+s mode "Exit (L)ogout, (R)eboot, (P)oweroff"
 
 # Scratchpad
 bindsym $mod+Shift+minus move scratchpad
@@ -153,13 +157,12 @@ bindsym $mod+p exec pcmanfm
 bindsym $mod+Escape exec i3lock-fancy
 bindsym $mod+Shift+t exec ~/.local/bin/togglealacrittyopacity
 bindsym $mod+Shift+b exec ~/.local/bin/setbackground -r
-bindsym Print exec flatpak run org.flameshot.Flameshot gui &
 
 # To be executed on reload
 exec_always --no-startup-id killall polybar; polybar &
 
 # Startup Applications
-exec xmodmap -e 'clear Lock' -e 'keycode 66 = Escape'"
+exec ~/.local/bin/setkeyboard prog_ch.xkb &
 exec ~/.local/bin/i3-battery-popup &
 exec nm-applet &
 exec blueman-applet &
