--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,6 +1,6 @@
 # i3 Config
 
-set $mod Mod4
+set $mod Mod1
 set $l n
 set $u i
 set $d e
@@ -80,7 +80,7 @@ bindsym $mod+t layout toggle split
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+mod1+space focus mode_toggle
+bindsym $mod+ctrl+space focus mode_toggle
 
 # Define names for default workspaces
 set $ws1 "1"
@@ -118,18 +118,6 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# move focused container to workspace and focus
-bindsym $mod+mod1+1 move container to workspace number $ws1; workspace number $ws1
-bindsym $mod+mod1+2 move container to workspace number $ws2; workspace number $ws2
-bindsym $mod+mod1+3 move container to workspace number $ws3; workspace number $ws3
-bindsym $mod+mod1+4 move container to workspace number $ws4; workspace number $ws4
-bindsym $mod+mod1+5 move container to workspace number $ws5; workspace number $ws5
-bindsym $mod+mod1+6 move container to workspace number $ws6; workspace number $ws6
-bindsym $mod+mod1+7 move container to workspace number $ws7; workspace number $ws7
-bindsym $mod+mod1+8 move container to workspace number $ws8; workspace number $ws8
-bindsym $mod+mod1+9 move container to workspace number $ws9; workspace number $ws9
-bindsym $mod+mod1+0 move container to workspace number $ws0; workspace number $ws0
-
 # Reload config file
 bindsym $mod+Shift+c reload
 # restart i3 inplace
@@ -148,6 +136,10 @@ mode "Exit (L)ogout, (R)eboot, (P)oweroff" {
 
 bindsym $mod+Shift+s mode "Exit (L)ogout, (R)eboot, (P)oweroff"
 
+# Alt Tab
+bindsym mod1+Tab exec ~/.local/bin/i3-alt-tab next all
+bindsym mod1+Shift+Tab exec ~/.local/bin/i3-alt-tab prev all
+
 # Scratchpad
 bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
@@ -162,8 +154,9 @@ bindsym $mod+Shift+b exec ~/.local/bin/setbackground -r
 exec_always --no-startup-id killall polybar; polybar &
 
 # Startup Applications
-exec ~/.local/bin/setkeyboard prog_ch.xkb &
+exec ~/.local/bin/setkeyboard ck.xkb &
 exec ~/.local/bin/i3-battery-popup &
+exec firefox &
 exec nm-applet &
 exec blueman-applet &
 exec picom &
