--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -50,7 +50,7 @@ type = internal/battery
 
 full-at = 99
 
-; $ ls -1 /sys/class/power_supply/
+; ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = AC
 
@@ -172,6 +172,3 @@ date-alt = %H:%M
 
 label = %date%
 label-foreground = ${colors.primary}
-
-[settings]
-screenchange-reload = true
