--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# Escape inside vim in tmux has a delay
+# Escape inside nvim in tmux has a delay
 set -sg escape-time 0
 
 # Source tmux config file
@@ -17,7 +17,7 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # vim-like pane switching
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+bind -r n select-pane -L
+bind -r e select-pane -D
+bind -r i select-pane -U
+bind -r o select-pane -R
