--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -11,7 +11,7 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 14pt
+height = 13pt
 dpi = 96
 radius = 0
 
@@ -23,7 +23,6 @@ foreground = ${colors.foreground}
 line-size = 1pt
 
 border-size = 0pt
-border-color = #00000000
 
 padding-left = 0
 padding-right = 1
@@ -35,7 +34,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrains Mono Semibold:pixelsize=9 1
 
-modules-left = xworkspaces xwindow
+modules-left = i3 xwindow
 modules-right = battery pulseaudio memory cpu wlan date
 
 cursor-click = pointer
@@ -96,25 +95,6 @@ ramp-capacity-4 =
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:80:...%
@@ -163,9 +143,27 @@ inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
+[module/i3]
+type = internal/i3
+
+label-mode = %mode%
+label-mode-padding = 0
+label-mode-foreground = ${colors.alert}
+
+label-focused = %index%
+label-focused-foreground = ${colors.foreground}
+label-focused-background = ${colors.background-alt}
+label-focused-underline = ${colors.primary}
+label-focused-padding = 1
+
+label-unfocused = %index%
+label-unfocused-padding = 1
+
+enable-scroll = false
+
 [module/date]
 type = internal/date
-interval = 1
+interval = 5
 
 date = %Y-%m-%d %H:%M:%S
 date-alt = %H:%M
