--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -9,8 +9,8 @@ set $r o
 font pango: Ubuntu Mono 8
 
 # Adjust Screen Brightness
-bindsym XF86MonBrightnessUp exec brightnessctl s +10%
-bindsym XF86MonBrightnessDown exec brightnessctl s 10%-
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl s +10%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl s 10%-
 
 # Adjust audio
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -20,9 +20,9 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+bindsym XF86AudioNext exec --no-startup-id playerctl next
+bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Method of Popup
 popup_during_fullscreen leave_fullscreen
@@ -39,36 +39,26 @@ hide_edge_borders smart
 for_window [class="^.*"] border pixel 1
 
 # Start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec --no-startup-id alacritty
 
 # Kill focused window
 bindsym $mod+q kill
 
 # Start rofi
-bindsym $mod+r exec rofi -show-icons -show run
-bindsym $mod+slash exec rofi -show-icons -show window
-bindsym $mod+space exec rofi -show-icons -show drun
+bindsym $mod+r exec --no-startup-id rofi -show-icons -show run
+bindsym $mod+slash exec --no-startup-id rofi -show-icons -show window
+bindsym $mod+space exec --no-startup-id rofi -show-icons -show drun
 
 # Change focus
 bindsym $mod+$l focus left
 bindsym $mod+$d focus down
 bindsym $mod+$u focus up
 bindsym $mod+$r focus right
-# Also with cursor keys
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
 # move focused window
 bindsym $mod+Shift+$l move left
 bindsym $mod+Shift+$d move down
 bindsym $mod+Shift+$u move up
 bindsym $mod+Shift+$r move right
-# Also with cursor keys
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # Split Windows
 bindsym $mod+s split v
@@ -153,21 +143,21 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 # Custom Keybindings
-bindsym $mod+p exec pcmanfm
-bindsym $mod+Escape exec i3lock-fancy
-bindsym $mod+Shift+t exec ~/.local/bin/togglealacrittyopacity
-bindsym $mod+Shift+p exec ~/.local/bin/touchpadtoggle.sh
-bindsym $mod+Shift+b exec ~/.local/bin/setbackground
-bindsym $mod+ctrl+Shift+space exec  ~/.local/bin/setkeyboard
+bindsym $mod+p exec --no-startup-id pcmanfm
+bindsym $mod+Escape exec --no-startup-id i3lock-fancy
+bindsym $mod+Shift+t exec --no-startup-id ~/.local/bin/togglealacrittyopacity
+bindsym $mod+Shift+p exec --no-startup-id ~/.local/bin/touchpadtoggle.sh
+bindsym $mod+Shift+b exec --no-startup-id ~/.local/bin/setbackground
+bindsym $mod+ctrl+Shift+space exec --no-startup-id  ~/.local/bin/setkeyboard
 
 # To be executed on reload
-exec_always --no-startup-id killall polybar; polybar &
-exec_always ~/.local/bin/setkeyboard prog_ck.xkb &
+exec_always killall polybar; polybar &
 
 # Startup Applications
-exec firefox &
-exec picom &
-exec nm-applet &
-exec blueman-applet &
-exec ~/.local/bin/i3-battery-popup &
-exec ~/.fehbg &
+exec --no-startup-id firefox &
+exec --no-startup-id picom &
+exec --no-startup-id nm-applet &
+exec --no-startup-id blueman-applet &
+exec --no-startup-id xkbcomp ~/.config/xkb/prog_ck.xkb  $DISPLAY &      
+exec --no-startup-id ~/.fehbg &
+exec --no-startup-id fluxgui &
