--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -44,6 +44,37 @@ tray-position = right
 
 wm-restack = i3
 
+[module/menu-apps]
+type = custom/menu
+
+label-open = Apps
+label-close = x
+
+; Optional item separator
+; Default: none
+label-separator = |
+; If true, <label-toggle> will be to the left of the menu items (default).
+; If false, it will be on the right of all the items.
+expand-right = true
+
+; "menu-LEVEL-N" has the same properties as "label-NAME" with
+; the additional "exec" property
+;
+; Commands will be executed using "/bin/sh -c $COMMAND"
+
+menu-0-0 = Browser
+menu-0-0-exec = #menu-apps.open.1
+menu-0-1 = Utilities
+menu-0-1-exec = #menu-apps.open.2
+
+menu-1-0 = Firefox
+menu-1-0-exec = firefox
+
+menu-2-0 = Files
+menu-2-0-exec = pcmanfm
+menu-2-1 = Appearance
+menu-2-1-exec = lxappearance
+
 [module/battery]
 type = internal/battery
 
@@ -97,7 +128,7 @@ animation-charging-framerate = 750
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:90:...%
+label = %title:0:80:...%
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -164,6 +195,7 @@ enable-scroll = false
 [module/date]
 type = internal/date
 interval = 5
+padding = 2
 
 date = %Y-%m-%d %H:%M:%S
 date-alt = %H:%M
