--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,18 +1,18 @@
 ; Polybar Config
 
 [colors]
-background = #1f2023
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
+background = #1c1b22
+background-alt = #2c3038
+foreground = #c8ccd4
+primary = #61afef
+secondary = #FFFFFF
+alert = #e06c75
 disabled = #707880
 
 [bar/example]
 width = 100%
-height = 13pt
-dpi = 96
+height = 14pt
+dpi = 100
 radius = 0
 
 bottom = false
@@ -32,7 +32,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrains Mono Semibold:pixelsize=9 1
+font-0 = JetBrains Mono Nerd Font:pixelsize=9:style=Medium
 
 modules-left = i3 xwindow
 modules-right = battery pulseaudio memory cpu wlan date
@@ -43,6 +43,10 @@ cursor-scroll = ns-resize
 tray-position = right
 
 wm-restack = i3
+
+; Create scroll handlers used to set the backlight value
+; Default: true
+enable-scroll = false
 
 [module/menu-apps]
 type = custom/menu
@@ -133,19 +137,19 @@ label = %title:0:80:...%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = "  "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted = ﱝ
 label-muted-foreground = ${colors.disabled}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 click-left = alacritty &
@@ -153,7 +157,7 @@ click-left = alacritty &
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -167,15 +171,17 @@ label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid%
+label-connected = %{F#61afef}%ifname%%{F-} %essid%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{{colors.primary}}%ifname%%{F-}
 
 [module/i3]
 type = internal/i3
+
+show-urgent = true
 
 label-mode = %mode%
 label-mode-padding = 0
