--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -4,30 +4,25 @@
 background = #1c1b22
 background-alt = #2c3038
 foreground = #c8ccd4
-primary = #61afef
-secondary = #FFFFFF
+primary = #98c379
 alert = #e06c75
 disabled = #707880
 
 [bar/example]
 width = 100%
 height = 14pt
-dpi = 100
-radius = 0
-
-bottom = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 1pt
 
-border-size = 0pt
-
 padding-left = 0
 padding-right = 1
 
 module-margin = 1
+
+wm-restack = i3
 
 separator = |
 separator-foreground = ${colors.disabled}
@@ -42,42 +37,25 @@ cursor-scroll = ns-resize
 
 tray-position = right
 
-wm-restack = i3
+[module/i3]
+type = internal/i3
 
-; Create scroll handlers used to set the backlight value
-; Default: true
+show-urgent = true
+
+label-mode = | %mode%
+label-mode-padding = 0
+label-mode-foreground = ${colors.alert}
+
+label-focused = %index%
+label-focused-foreground = ${colors.foreground}
+label-focused-background = ${colors.background-alt}
+label-focused-underline = ${colors.primary}
+label-focused-padding = 1
+
+label-unfocused = %index%
+label-unfocused-padding = 1
+
 enable-scroll = false
-
-[module/menu-apps]
-type = custom/menu
-
-label-open = Apps
-label-close = x
-
-; Optional item separator
-; Default: none
-label-separator = |
-; If true, <label-toggle> will be to the left of the menu items (default).
-; If false, it will be on the right of all the items.
-expand-right = true
-
-; "menu-LEVEL-N" has the same properties as "label-NAME" with
-; the additional "exec" property
-;
-; Commands will be executed using "/bin/sh -c $COMMAND"
-
-menu-0-0 = Browser
-menu-0-0-exec = #menu-apps.open.1
-menu-0-1 = Utilities
-menu-0-1-exec = #menu-apps.open.2
-
-menu-1-0 = Firefox
-menu-1-0-exec = firefox
-
-menu-2-0 = Files
-menu-2-0-exec = pcmanfm
-menu-2-1 = Appearance
-menu-2-1-exec = lxappearance
 
 [module/battery]
 type = internal/battery
@@ -90,49 +68,24 @@ adapter = AC
 
 poll-interval = 2
 
-format-charging = <label-charging>
-format-charging-prefix = "CHR"
-format-charging-prefix-background = ${colors.background}
-format-charging-prefix-foreground = ${colors.primary}
-format-charging-prefix-padding = 1
-
-format-discharging = <label-discharging>
-format-discharging-prefix = "BAT"
-format-discharging-prefix-background = ${colors.background}
-format-discharging-prefix-foreground = ${colors.primary}
-format-discharging-prefix-padding = 1
-
-format-full = <label-full>
-format-full-prefix = ""
-format-full-prefix-background = ${colors.background}
-format-full-prefix-foreground = ${colors.primary}
-format-full-prefix-padding = 1
-
 label-charging = %percentage%%
-label-charging-background = ${colors.background}
-label-charging-padding = 1
+format-charging = <label-charging>
+format-charging-prefix = " "
+format-charging-prefix-foreground = ${colors.primary}
 
 label-discharging = %percentage%%
-label-discharging-background = ${colors.background}
-label-discharging-padding = 0
+format-discharging = <label-discharging>
+format-discharging-prefix = " "
+format-discharging-prefix-foreground = ${colors.primary}
 
-label-full = Full
-label-full-background = ${colors.background}
-label-full-foreground = ${colors.primary}
-label-full-padding = 0
-
-ramp-capacity-0 =
-ramp-capacity-1 =
-ramp-capacity-2 =
-ramp-capacity-3 =
-ramp-capacity-4 =
-
-; Framerate in milliseconds
-animation-charging-framerate = 750
+label-full = 100%
+format-full = <label-full>
+format-full-prefix = " "
+format-full-prefix-foreground = ${colors.primary}
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:80:...%
+label = %title:0:90:...%
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -152,7 +105,6 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
-click-left = alacritty &
 
 [module/cpu]
 type = internal/cpu
@@ -164,39 +116,19 @@ label = %percentage:2%%
 [network-base]
 type = internal/network
 interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
+
+format-connected-prefix = "直 "
+format-connected-prefix-foreground = ${colors.primary}
+
 interface-type = wireless
-label-connected = %{F#61afef}%ifname%%{F-} %essid%
+label-connected = %essid%
+label-connected-foreground = ${colors.foreground}
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{{colors.primary}}%ifname%%{F-}
-
-[module/i3]
-type = internal/i3
-
-show-urgent = true
-
-label-mode = %mode%
-label-mode-padding = 0
-label-mode-foreground = ${colors.alert}
-
-label-focused = %index%
-label-focused-foreground = ${colors.foreground}
-label-focused-background = ${colors.background-alt}
-label-focused-underline = ${colors.primary}
-label-focused-padding = 1
-
-label-unfocused = %index%
-label-unfocused-padding = 1
-
-enable-scroll = false
+label-disconnected = 睊
+label-disconnected-foreground = #66ffffff
 
 [module/date]
 type = internal/date
@@ -204,7 +136,6 @@ interval = 5
 padding = 2
 
 date = %Y-%m-%d %H:%M:%S
-date-alt = %H:%M
 
 label = %date%
 label-foreground = ${colors.primary}
