Sum changes before qwerty

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -27,7 +27,8 @@ wm-restack = i3
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrains Mono Nerd Font:pixelsize=9:style=Medium
+font-0 = JetBrains Mono:pixelsize=9:style=Medium
+font-1 = Fira Code Nerd Font:pixelsize=9:style=Medium
 
 modules-left = i3 xwindow
 modules-right = battery pulseaudio memory cpu wlan date
