--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -20,7 +20,7 @@ font:
     style: Bold Italic
   size: 11
 
-# One dark theme
+# Colors (One Dark)
 colors :
   primary:
     background: '0x1e2127'
