A lot of changes

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -4,7 +4,7 @@
 background = #1c1b22
 background-alt = #2c3038
 foreground = #c8ccd4
-primary = #98c379
+primary = #61afef
 alert = #e06c75
 disabled = #707880
 
