--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -1,5 +1,8 @@
 # Sway Config
 
+seat seat0 xcursor_theme "Future-cyan-cursors"
+exec_always gsettings set org.gnome.desktop.interface cursor-theme "Future-cyan-cursors"
+
 set $mod Mod1
 set $left n
 set $down e
