--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -152,7 +152,7 @@ mode "Exit (L)ogout, (R)eboot, (P)oweroff" {
     bindsym Escape mode "default"
 }
 
-output * bg $HOME/.local/share/backgrounds/Krita.png fill
+output * bg $HOME/.local/share/backgrounds/archcraft.png FILL
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #DA6E89 #DA6E89 #FFFFFF #98C379   #DA6E89
