--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -9,6 +9,7 @@ set {
     $down e
     $up i
     $right o
+    $run dmenu -i -fn "JetBrains Mono:pixelsize=16" -nb "#1a1b26" -nf "#c0caf5" -sb "#9ece6a" -sf "#15161E"
 }
 
 font pango: Ubuntu Mono 8
@@ -63,8 +64,8 @@ bindsym $mod+Return exec foot
 bindsym $mod+q kill
 
 # Start launcher
-bindsym $mod+r exec  dmenu_path | dmenu -i | xargs swaymsg exec --
-bindsym $mod+space exec ~/.local/bin/dmenu_desktop | dmenu -i | ~/.local/bin/dmenu_desktop -e
+bindsym $mod+r exec  dmenu_path | $run -p Run | xargs swaymsg exec --
+bindsym $mod+space exec ~/.local/bin/dmenu_desktop | $run -p Apps | ~/.local/bin/dmenu_desktop -e
 
 # Floating
 floating_modifier $mod normal
@@ -152,7 +153,6 @@ mode "Exit (L)ogout, (R)eboot, (P)oweroff" {
     bindsym Escape mode "default"
 }
 
-output * bg $HOME/.local/share/backgrounds/archcraft.png FILL
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #DA6E89 #DA6E89 #FFFFFF #98C379   #DA6E89
@@ -176,3 +176,4 @@ exec ~/.local/bin/sway-battery-popup &
 exec_always ~/.local/bin/waybar.sh
 
 include /etc/sway/config.d/*
+include $HOME/.config/sway/background
