--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -9,7 +9,7 @@ set {
     $down e
     $up i
     $right o
-    $run dmenu -i -fn "JetBrains Mono:pixelsize=16" -nb "#1a1b26" -nf "#c0caf5" -sb "#9ece6a" -sf "#15161E"
+    $run dmenu -i -fn "JetBrains Mono:pixelsize=14" -nb "#1a1b26" -nf "#c0caf5" -sb "#9ece6a" -sf "#15161E"
 }
 
 font pango: Ubuntu Mono 8
@@ -140,19 +140,8 @@ bindsym $mod+shift+a focus child
 bindsym $mod+Shift+dollar move scratchpad
 bindsym $mod+dollar scratchpad show
 
-# Create Log out, Reboot, Poweroff bindings
-bindsym $mod+Shift+s mode "Exit (L)ogout, (R)eboot, (P)oweroff"
-
-mode "Exit (L)ogout, (R)eboot, (P)oweroff" {
-    bindsym $mod+r exec systemctl reboot
-    bindsym $mod+l exit
-    bindsym $mod+p exec systemctl poweroff
-
-# back to normal: Enter or Escape
-    bindsym $mod+Shift+s mode "default"
-    bindsym Escape mode "default"
-}
-
+# Logout, Reboot and shutdown
+bindsym $mod+Shift+s exec ~/.local/bin/exit_dmenu
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #DA6E89 #DA6E89 #FFFFFF #98C379   #DA6E89
@@ -173,7 +162,7 @@ exec nm-applet &
 exec blueman-applet &
 exec ~/.local/bin/sway-battery-popup &
 
-exec_always ~/.local/bin/waybar.sh
+exec_always ~/.local/bin/launch-yambar
 
 include /etc/sway/config.d/*
 include $HOME/.config/sway/background
